# lib_devices

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/include/: device_iostream.h  device_udp.h  devices.h
lib/src/: device_iostream.cpp  device_udp.cpp
test/: CMakeLists.txt
test/src/: main.cpp
